[tool.poetry]
name = "datafile"
version = "0.1.0"
description = ""
authors = ["nalabelle <nalabelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dataclasses-yaml = {git = "https://github.com/nalabelle/py-dataclasses_yaml.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
